Fix products align

--- a/app/assets/stylesheets/agency.css.scss
+++ b/app/assets/stylesheets/agency.css.scss
@@ -1067,6 +1067,7 @@ p {
     color: #777;
     display: inline-block;
     width: 50%;
+    vertical-align:top;
 }
 
 .row.included-product:hover {
